Moved material code files around and added more recipies to the rest of the material blocks.